# SlicerHDBET

./: CMakeLists.txt  README.md
ExtTest/: CMakeLists.txt
ExtTest/MyMod/: CMakeLists.txt  MyMod.py
ExtTest/MyMod/Resources/UI/: MyMod.ui
HDBET/: CMakeLists.txt  HDBET.py
HDBET/Lib/: config.py  data_loading.py  network_architecture.py  paths.py  predict_case.py  run.py  utils.py
HDBET/Resources/UI/: HDBET.ui
